--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -84,6 +84,9 @@
 \newcommand{\f}[1]{\mathfrak{#1}} % frak letters
 \newcommand{\h}{\widehat} % hat letters
 
+\newcommand{\Un}{\mathrm{U}} % unordered IJ
+\newcommand{\Or}{\mathrm{O}} % ordered IJ
+
 % math commands
 \newcommand{\set}[2]{\left\{ #1 \;\middle|\; #2 \right\}} % set notation
 \newcommand{\bigset}[2]{\big\{ #1 \;\big|\; #2 \big\}} % big set notation
@@ -277,6 +280,14 @@ The purpose of this article is to study cellular diagonals on the permutahedra, 
 Such diagonals, and in particular coherent families that we call \emph{operadic} diagonals (see [DEF] \BDO{Reference ?}), are of interest in algebraic geometry and topology: via the theory of Fulton--Sturmfels \cite{fultonIntersectionTheoryToric1997a}, they give explicit formulas for the cup product on Losev--Manin toric varieties \cite{losevNewModuliSpaces2000}; they define universal tensor products of homotopy operads, and in particular universal tensor products of homotopy associative permutads (shuffle algebras) \cite{LA21}; they allow for the definition of a coproduct on permutahedral sets, which are used to models of two-fold loop spaces \cite{SaneblidzeUmble04}; and their study is moreover needed to pursue the work of Baues aiming at defining explicit combinatorial models for higher iterated loop spaces \cite{bauesGeometryLoopSpaces1980}. 
 Moreover, using the canonical projections to the multiplihedra and the associahedra, they define universal tensor product of $\Ainf$-algebras and $\Ainf$-morphisms \cite{MazuirLA22}.
 \Guillaume{lien avec les matroides?}
+
+\Guillaume{Mentionner le travail en cours de Lionel Pournin?}
+
+The toric varieties associated with the permutahedron are called Losev--Manin varieties, introduced in \cite{losevNewModuliSpaces2000}.
+\Guillaume{They are De Concini--Procesi wonderful compactifications of \dots
+They are also brick manifolds?}
+The cohomology ring structure was studied by Losev and Manin, and quite extensively since then. \Guillaume{See for example "Graph cohomology"} 
+Our current work brings a completely combinatorially explicit description of the cup product, it would be interesting to know if this new description can lead to new results, or how it can be used to recover existing ones.
 
 %%%%%%%%%%%%%%%
 
@@ -1591,105 +1602,103 @@ Our choices just limit the amount of oriented cycles in~$D_{\orient{\pi}}$.
 
 \subsection{Cellular diagonals for polytopes}
 
-\vincent{Tell somewhere that the faces of the diagonal are some of the pairs~$(F,G)$ with $\max(F) \le \min(G)$, but not all. One of the first polytopes for which the magical formula does not hold.}
+The usual \emph{thin diagonal} of a topological space $X$ is the map~$\Delta : X \to X \times X$ defined by $\Delta(x):=(x,x)$ for all $x \in X$.
 
-The usual \emph{thin diagonal} of a topological space $X$ is the map $\Delta : X \to X \times X$ defined by $\Delta(x):=(x,x)$ for all $x \in X$.
-
-\begin{definition}[Cellular diagonal] \label{def:cellular diagonal}
-    A \emph{cellular diagonal} of a polytope $P$ is a continuous map $P \to P \times P$ such that
+\begin{definition} 
+\label{def:cellular diagonal}
+    A \defn{cellular diagonal} of a polytope $P$ is a continuous map $P \to P \times P$ such that
     \begin{enumerate}
         \item its image is a union of $\dim P$-faces of $P\times P$ (i.e. it is \emph{cellular}),
         \item it agrees with the thin diagonal on the vertices of $P$, and
         \item it is homotopic to the thin diagonal, relative to the image of the vertices. 
     \end{enumerate}
-    A cellular diagonal is said to be \emph{face-coherent} if its restriction to a face of $P$ is itself a cellular diagonal for that face. 
+    A cellular diagonal is said to be \defn{face-coherent} if its restriction to a face of $P$ is itself a cellular diagonal for that face. 
 \end{definition}
 
 A powerful geometric technique to define face-coherent cellular diagonals on polytopes first appeared in \cite{fultonIntersectionTheoryToric1997a}, was presented in \cite{masudaDiagonalAssociahedra2021}, and was fully developed in \cite{LA21}.
-The key idea is the following: any vector $\vec v$ in generic position with respect to $P$ defines a cellular diagonal~$\triangle_{(P,\vec v)}$, via the formula
-\begin{align*}
-    \begin{array}{rlcl}
-    \triangle_{(P,\vec v)}\  : & P &\to  &P\times P\\
-    &z & \mapsto& 
-    \bigl(\min_{\vec v}(P\cap \rho_z P),\,  \max_{\vec v}(P\cap \rho_z P)\bigr) \ .
-    \end{array}
-\end{align*}
-Here, $\rho_z P := 2z-P$ denotes the reflection of $P$ with respect to the point $z$, and $\min_{\vec v}(P)$ denotes the unique vertex of $P$ which minimizes the scalar product with $\vec v$. 
-The diagonal $\triangle_{(P,\vec v)}$ defines a canonical polytopal subdivision of $P$: it is by construction a tight coherent section of the projection $\pi : P \times P \to (P+P)/2$, and to obtain the subdivision one just needs to draw the polytopes $(F+G)/2$, for all pairs of faces $(F,G) \in \Ima \triangle_{(P,\vec v)}$.
-For the rest of the paper, every time we will speak about a diagonal, \emph{we will always mean such a map}. 
+The key idea is that any vector $\vec v$ in generic position with respect to $P$ defines a cellular diagonal of $P$. 
 
-\vincent{This subsection should only be about diagonals of polytopes, not specific to the permutahedron.}
-\vincent{This is where I would connect the diagonal~$\triangle_{(P,\vec v)}$ with the oriented skeleton of~$P$ in direction~$\vec v$.}
-\begin{definition}[Diagonal of the permutahedron]
+\begin{definition}
     \label{def:diagonal}
-    A \emph{cellular diagonal} or simply a \emph{diagonal} $\triangle_{(P,\vec v)}$ of the permutahedron~$P$ is a tight coherent section of the projection $P \times P \to P, (x,y) \mapsto (x+y)/2$.
+    A \defn{cellular diagonal} or simply a \defn{diagonal} of a polytope~$P$ is a tight coherent section~$\triangle_{(P,\vec v)}$ of the projection $P \times P \to P, (x,y) \mapsto (x+y)/2$.
+    It is given explicitly by a choice of generic vector $\vec v$ via the formula
+    \begin{align*}
+        \begin{array}{rlcl}
+        \triangle_{(P,\vec v)}\  : & P &\to  &P\times P\\
+        &z & \mapsto& 
+        \bigl(\min_{\vec v}(P\cap \rho_z P),\,  \max_{\vec v}(P\cap \rho_z P)\bigr) \ ,
+        \end{array}
+    \end{align*}
+    where $\rho_z P := 2z-P$ denotes the reflection of $P$ with respect to the point $z$, and $\min_{\vec v}(P)$ (resp. $\max_{\vec v}(P)$) denotes the unique vertex of $P$ which minimizes (resp. maximizes) the scalar product with $\vec v$. 
 \end{definition}
 
-Such a map can be seen as a topological map, or as a map of lattices; we shall not change notation and the context should make clear which version we are referring to.
-%We will sometimes denote a diagonal of the $n$-permutahedron by $\triangle_n$. 
+\begin{figure}[h!]
+	\includegraphics[scale=.9]{diagonalTriangle3.pdf}
+    \quad
+    \includegraphics[scale=.9]{diagonalTriangle4.pdf}
+    \quad
+    \includegraphics[scale=.9]{diagonalSquarre3.pdf}
+    \includegraphics[scale=.9]{diagonalSquarre4.pdf}
+	\caption{The thin (in blue) and cellular (in red) diagonals of the triangle and the square.}
+	\label{fig:diagonal-2simplex}
+\end{figure}
 
-\begin{definition}[Diagonal's $f$-vector]
-    The \emph{$f$-vector} of the diagonal $\triangle_{(P,\vec v)}$ is the number of faces of $P\times P$ of given total dimension in its cellular image.
+The image of $\triangle_{(P,\vec v)}$ is a family of pairs of faces $F \times G \subset P \times P$.
+The generic vector $\vec v$ orients the $1$-skeleton of $P$, which defines for each face $F$ of $P$ a unique minimum vertex~$\min_{\vec v}(F)$, and a unique maximum vertex $\max_{\vec v}(F)$.
+The following inclusion was proved in \cite[Prop. 1.17]{LA21}.
+
+\begin{proposition}
+    For any polytope $P$, and for any generic vector $\vec v$, we have that 
+    \begin{equation}
+        \Ima\triangle_{(P, \vec v)} \subset \bigcup_{\substack{F,G \subset P \\ \max_{\vec v}(F) \leq \min_{\vec v}(G)}} F \times G \ . \label{eq:magique}
+    \end{equation}
+\end{proposition}
+
+That is, the pairs of faces in the image of a cellular diagonal are always comparable under the partial order induced by $\vec v$ on the $1$-skeleton. 
+
+\begin{remark}
+    For some polytopes such as the simplices, the cubes, the Hoschild polytopes, and the associahedra, the reverse inclusion also holds.
+    The resulting equality enhancing (\ref{eq:magique}) was called \defn{magical formula} by J.-L. Loday. 
+    Polytopes of greater complexity such as the multiplihedra, the operahedra or the permutahedra, do not possess this exceptional property. 
+\end{remark}
+
+The diagonal $\triangle_{(P,\vec v)}$ defines a canonical polytopal subdivision of $P$, obtained by drawing the polytopes $(F+G)/2$, for all pairs of faces $(F,G) \in \Ima \triangle_{(P,\vec v)}$.
+
+\begin{figure}[h!]
+	\includegraphics[scale=.2]{diagonalSimplexGuillaume.png}
+    \quad
+    \includegraphics[scale=.2]{diagonalCubeGuillaume.png}
+    \quad
+    \includegraphics[scale=.2]{diagonalPermutahedronGuillaume.png}
+	\caption{The subdivisions induced by cellular diagonals of the $3$-simplex, cube, and permutahedron.}
+	\label{fig:diagonal-3simplex}
+\end{figure}
+
+\begin{definition}
+    The \defn{$f$-vector} of the diagonal $\triangle_{(P,\vec v)}$ is the number of faces of $P\times P$ of given total dimension in its cellular image.
     Alternatively, it is the $f$-vector of the polytopal complex~$\pi (\triangle_{(P,\vec v)})$.
 \end{definition}
 
 For the purpose of studying this $f$-vector, one can study the dual of the polytopal complex, see \cref{fig:diagonalPermutahedron1}.
+The following was proven in \cite[Corollary 1.4]{LA21}.
 
 \begin{proposition}
-    The $f$-vector of the $(\ell-1)$\ordinalst{} iteration of a diagonal of the $(n-1)$-permutahedron $\triangle_{(P,\vec v)}$ is given by the opposite of the $f$-vector of the $(\ell,n)$-braid arrangement.
+    The $f$-vector of the diagonal $\triangle_{(P,\vec v)}$ is given by the opposite of the $f$-vector of the polyhedral complex made of two copies of the normal fan of $P$, one of them perturbed in the direction $\vec v$. 
 \end{proposition}
 
-\begin{proof}
-    For $\ell=2$, this is in fact precisely the content of the \emph{Fulton--Sturmfels formula} for the intersection product on toric varieties \cite[Theorem 4.2]{fultonIntersectionTheoryToric1997a}.
-    Alternatively, it follows from \cite[Proposition 1.3]{LA21}, and \cite[Corollary 1.4]{LA21} describes precisely the intersection poset of the hyperplane arrangement.
-    The result for arbitrary $\ell$ follows directly. 
-\end{proof}
-
-\begin{remark} \Guillaume{completer et mettre dans l'intro}
-    The toric varieties associated with the permutahedron are called Losev--Manin varieties, introduced in \cite{losevNewModuliSpaces2000}.
-    \Guillaume{They are De Concini--Procesi wonderful compactifications of \dots
-    They ate also brick manifolds?}
-    The cohomology ring structure was studied by Losev and Manin, and quite extensively since then. \Guillaume{See for example "Graph cohomology"} 
-    Our current work brings a completely combinatorially explicit description of the cup product, it would be interesting to know if this new description can lead to new results, or how it can be used to recover existing ones.
+\begin{remark}
+    This is in fact precisely the content of the \emph{Fulton--Sturmfels formula} for the intersection product on toric varieties \cite[Theorem 4.2]{fultonIntersectionTheoryToric1997a}, where the definition of cellular diagonals as tight coherent sections first appeared.
 \end{remark}
 
-%%%%%%%%%%%%%%%
+The following \defn{universal formula} \cite[Theorem 1.26]{LA21} expresses combinatorially the cellular image of the diagonal of a polytope $P$.
 
-\subsection{Cellular diagonals for the permutahedra}
-\label{s:diagonals-permutahedra}
-
-Let us first set up some notations that will be of use throughout the paper. 
-A set $\sigma_I := \bigcup_{i\in I} \sigma_i$ is a \emph{partition} of $[n]:=\{1,\ldots,n\}$ if $\bigcup_{i\in I} \sigma_i = [n]$ and $\sigma_i \cap \sigma_j = \emptyset$ for $i \neq j$.
-The subsets $\sigma_i$ are called \emph{blocks}. 
-We denote by $|\sigma|:=|I|$ the size of the partition (its number of blocks).
-A partition is \emph{ordered} if the indexing set $I$ is equipped with a total order; in what follows we shall use $I=[k]$ for $k \in \N$. 
-We use the shorthand $14|23$ to denote both the unordered  partition $\{\{1,4\},\{2,3\}\}$, and also the ordered partition $(\{1,4\},\{2,3\})$ (when the order is clear from context).
-\vincent{All this paragraph is useless... or should appear in \cref{subsec:braidArrangement}...}
-
-\begin{figure}
-	\includegraphics[scale=.9]{diagonalPermutahedron2}
-	\caption{Labelings of the faces of the permutahedron~$\Perm[3]$ by ordered partitions of~$[3]$ (left) and of the faces of the LA diagonal  $\LAD$ of the permutahedron~$\Perm[3]$ by pairs of compatible ordered partitions of~$[3]$ (right).}
-	\label{fig:diagonalPermutahedron2}
-\end{figure}
-
-Let us recall the universal formula expressing combinatorially the cellular image of the diagonal of a polytope $P$ obtained in \cite[Theorem 1.26]{LA21}.
-It is expressed in terms of the \emph{fundamental hyperplane arrangement} of $P$. 
-
-\begin{definition}[Fundamental hyperplane arrangement]
-    The \emph{fundamental hyperplane arrangement} $\mathcal{H}_P$ of a polytope $P \subset \R^n$ is the set of hyperplanes whose normal vectors are a choice of directions of the edges of $P\cap \rho_z P$, for any $z \in P$. 
-\vincent{This definition should appear in the previous paragraph...}
+\begin{definition}
+    The \defn{fundamental hyperplane arrangement} $\mathcal{H}_P$ of a polytope $P \subset \R^n$ is the set of hyperplanes whose normal vectors are a choice of directions of the edges of $P\cap \rho_z P$, for any $z \in P$. 
 \end{definition}
 
-\begin{example}
-    Let $U(n):=\{ (I,J) \ | \ I,J \subset [n], |I|=|J|>0, I \cap J = \emptyset\}$.
-    The fundamental hyperplane arrangement of the $(n-1)$-permutahedron is given by the family of hyperplanes \[ \sum_{i \in I} x_i = \sum_{j \in J} x_j \ ,  \ (I,J) \in U(n) \ . \] 
-\end{example}
-
-\Guillaume{Mentionner le travail en cours de Lionel Pournin?}
-
-\begin{theorem}[Universal formula]
-    \label{thm:universal-formula}
-    Let $(P,\vec v)$ be a positively oriented polytope in $\R^n$. 
+\begin{theorem}
+\label{thm:universal-formula}
+Let $(P,\vec v)$ be a positively oriented polytope in $\R^n$. 
 For each $H\in\mathcal{H}_P$, we choose a normal vector $\vec d_H$ such that $\langle \vec d_H, \vec v \rangle >0$. 
 We have 
 \begin{eqnarray}
@@ -1697,22 +1706,48 @@ We have
 &\iff& \forall H \in \mathcal{H}_P(F,G), \ \exists i , \ \langle \vec F_i, \vec d_H \rangle < 0  \text{ or } \exists j , \ \langle \vec G_j, \vec d_H \rangle > 0  \\ 
 &\iff& \forall H \in \mathcal{H}_P , \ \exists i , \ \langle \vec F_i, \vec d_H \rangle < 0  \text{ or } \exists j , \ \langle \vec G_j, \vec d_H \rangle > 0 \ . 
 \end{eqnarray} 
-\vincent{This theorem should appear in the previous paragraph...}
 \end{theorem}
 
 Here, the $\vec F_i$ and $\vec G_j$ are vectors spanning the normal cones of the respective faces, and $\mathcal{H}_P(F,G)$ is a subset of hyperplanes which are specifically associated to the pair $(F,G)$.
-Applying this Theorem to $P$ the permutahedron, we obtain the following. 
 
-\begin{corollary}
-    Any choice of diagonal of the $(n-1)$-permutahedron is given combinatorially by a choice of inequalities \[ \sum_{i \in I} x_i > \sum_{j \in J} x_j \text{ or } \sum_{i \in I} x_i < \sum_{j \in J} x_j \]
-    for all $(I,J) \in U(n)$. 
-\end{corollary}
+%%%%%%%%%%%%%%%
+
+\subsection{Cellular diagonals for the permutahedra}
+\label{s:diagonals-permutahedra}
+
+We now specialize the results of the preceding Section to the standard permutahedron. 
+
+\begin{proposition}
+    The $f$-vector of the $(\ell-1)$\ordinalst{} iteration of a diagonal of the $(n-1)$-permutahedron $\triangle_{(P,\vec v)}$ is given by the opposite of the $f$-vector of the $(\ell,n)$-braid arrangement.
+\end{proposition}
+
+\begin{proposition}
+    A diagonal $\triangle_{(P,\vec v)}$ of the standard permutahedron does \emph{not} satisfy the magical formula.
+    That is, the inclusion      
+    \begin{equation*}
+        \Ima\triangle_{(P, \vec v)} \subsetneq \bigcup_{\substack{F,G \subset P \\ \max_{\vec v}(F) \leq \min_{\vec v}(G)}} F \times G  
+    \end{equation*}
+    is strict, for any choice of generic vector $\vec v$. 
+\end{proposition}
 
 \begin{proof}
-    A choice of diagonal is given by a choice of vector in a chamber of $\mathcal{H}_P$, two vectors living in the same chamber inducing the same diagonal \cite[Proposition 1.23]{LA21}.
+    \Guillaume{On peut montrer ça uniquement par le compte des faces non?}
 \end{proof}
 
-\vincent{Here, we need to treat all diagonals. Each choice of region in the fundamental hyperplane arrangement gives an orientation of both partitions of a partition forest. We need to explicitly describe this orientation.}
+The fundamental hyperplane arrangement of the permutahedron was computed in \cite[Section 3.1]{LA21}.
+
+\begin{proposition}
+    Let $\Un(n):=\{ (I,J) \ | \ I,J \subset [n], |I|=|J|>0, I \cap J = \emptyset\}$.
+    The fundamental hyperplane arrangement of the $(n-1)$-permutahedron is given by the family of hyperplanes \[ \sum_{i \in I} x_i = \sum_{j \in J} x_j \ ,  \ (I,J) \in \Un(n) \ . \] 
+\end{proposition}
+
+Recall that a choice of diagonal is given by a choice of vector in a chamber of $\mathcal{H}_P$, two vectors living in the same chamber inducing the same diagonal \cite[Proposition 1.23]{LA21}.
+
+\begin{corollary}
+    Any choice of diagonal of the $(n-1)$-permutahedron is given combinatorially by a choice of inequalities \[ \sum_{i \in I} x_i > \sum_{j \in J} x_j \quad \text{or} \quad \sum_{i \in I} x_i < \sum_{j \in J} x_j \]
+    for all $(I,J) \in \Un(n)$. 
+\end{corollary}
+
 
 %%%%%%%%%%%%%%%
 
